Fix the version arrows to be Moodle's canonicals, align the version block in the center

--- a/styles.css
+++ b/styles.css
@@ -119,3 +119,11 @@
     right: 30px;
     margin: 5px 0;
 }
+
+.article-version-toggle {
+   text-align: center;
+}
+
+.article-version-toggle a.arrow_link {
+  margin: 0 0.5em;
+}
